/*
 * $Id: ChangeLog,v 1.886 2003/03/28 22:29:35 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-28 21:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
  * utils/hbmake/hbmutils.prg
    ! replace all calls to listasarray2() with fastern hb_atokens()
    removed listasarray2() function from hbmutils.prg  modules
  * source/rtl/tget.prg
    + added Clipper 5.3 compatible datas CapRow and CapCol
  * include/hbver.h
    ! Changed to Build 0.80

2003-03-28 19:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! minor fix, to an problem reported by users
    
2003-03-27 21:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
  * source/compiler/harbour.sly
    * Improved support for Instance Var BY-REF to not require the "()".
    * Improved support for MacroExp BY-REF, to support any valid macro expression.

  /*
     NOTE: New Syntax is simply:

        @<AnyExp>:<Indentifier>
        @&<SomeMacro>
        @&<SomeMacro.Suffix>
        @&( <AnyExp> )

     Such reference may be passed as argument to a Function Call, or may be embeded in a Literal Array.
   */

  * tests/ivarref.prg
  * tests/macroref.prg
    * Enhanced testing and demo.

2003-03-27 16:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + Added support for DISPATCH_PROPERTYPUTREF.

2003-03-27 13:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed optimization of HB_P_SENDSHORT to not optimize super mehods.

2003-03-27 21:57 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rdd/dbfntx/dbfntx1.c
    ! Ported latest Harbour fix (reported to work).

2003-03-27 14:54 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbreadini.prg
    ! Case sensitivity option is now working in HB_ReadIni() function
